[tool.poetry]
name = "music_renamer"
version = "0.1.0"
description = "Renames music files based on their tags"
authors = ["Harry"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
