[tool.poetry]
name = "jamz"
version = "0.1.0"
description = "Renames music files based on their tags"
authors = ["Harry"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mutagen = "^1.45.1"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
black = "^21.4b2"

[tool.poetry.scripts]
jamz = 'jamz.jamz:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
